--- a/www/index.html
+++ b/www/index.html
@@ -40,10 +40,10 @@
             <button @click="purchase">new sale</button>
             <br>
             <br>
-            <button>recent sales</button>
+            <button @click="soon">recent sales</button>
             <br>
             <br>
-            <button>settings</button>
+            <button @click="soon">settings</button>
           </div>
         </div>
       </transition>
@@ -86,19 +86,20 @@
         </div>
       </transition>
     </div>
-    <!-- LIBS -->
-    <script type="text/javascript" src="cordova.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="js/lib/steem.min.js"></script>
-    <script src="js/lib/aes.js"></script>
-    <script src="js/lib/utils.js"></script>
-    <!-- <script src="js/lib/steempay.js"></script> -->
-    <script src="js/lib/steempay.api.js"></script>
-    <script src="js/lib/steempay.nfc.js"></script>
-    <!-- SCRIPTS -->
-    <script src="js/config.js"></script>
-    <script src="js/app.js"></script>
+  </div>
+  <!-- LIBS -->
+  <script type="text/javascript" src="cordova.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="js/lib/steem.min.js"></script>
+  <script src="js/lib/aes.js"></script>
+  <script src="js/lib/utils.js"></script>
+  <!-- <script src="js/lib/steempay.js"></script> -->
+  <script src="js/lib/steempay.api.js"></script>
+  <script src="js/lib/steempay.nfc.js"></script>
+  <!-- SCRIPTS -->
+  <script src="js/config.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
