--- a/www/index.html
+++ b/www/index.html
@@ -32,12 +32,12 @@
       <!-- HOME SCREEN -->
       <transition name="fade">
         <div id="home" v-show="route === 'home'">
-          <div class="bottomNav">
+          <div class="center">
             <br>
             <br>
             <br>
             <br>
-            <button @click="purchase">new sale</button>
+            <button @click="route = 'sale'">new sale</button>
             <br>
             <br>
             <button @click="soon">recent sales</button>
@@ -49,7 +49,37 @@
       </transition>
       <!-- SALE PAGE -->
       <transition name="fade">
-        <div id="sale" v-show="route === 'nfc'">
+        <div id="sale" v-show="route === 'sale'">
+          <div class="center">
+            <form action='' method='' id='form' autocomplete='off'>
+  				    <input v-model='usd' type='text' class='box' value='' disabled>
+  				    <br>
+  				    <input @click="add('1')" type='button' class='button number' value='1'>
+  				    <input @click="add('2')" type='button' class='button number' value='2'>
+  				    <input @click="add('3')" type='button' class='button number' value='3'>
+  				    <br>
+  				    <input @click="add('4')" type='button' class='button number' value='4'>
+  				    <input @click="add('5')" type='button' class='button number' value='5'>
+  				    <input @click="add('6')" type='button' class='button number' value='6'>
+  				    <br>
+  				    <input @click="add('7')" type='button' class='button number' value='7'>
+  				    <input @click="add('8')" type='button' class='button number' value='8'>
+  				    <input @click="add('9')" type='button' class='button number' value='9'>
+  				    <br>
+  				    <input @click="add('.')" type='button' class='button number' value='.'>
+  				    <input @click="add('0')" type='button' class='button number' value='0'>
+  				    <input @click="add('00')" type='button' class='button number' value='00'>
+  				    <br>
+  				    <input @click="cancel" type='button' class='button clear' value='cancel'>
+  				    <input @click="clear" type='button' class='button clear' value='clear'>
+  				    <input @click="purchase" type='button' class='button enter' value='enter'>
+  			    </form>
+          </div>
+        </div>
+      </transition>
+      <!-- PURCHASE PAGE -->
+      <transition name="fade">
+        <div id="purchase" v-show="route === 'nfc'">
           <div class="primary maintext info"><span class='price'>{{ price }}</span></div>
           <img class="nfc" src='img/nfc.png'>
           <p class="dark maintext confirm">tap card to purchase</p>
@@ -58,7 +88,7 @@
             <code class='primary memo'>{{ memo }}</code>
           </p>
           <br>
-          <div class='bottomNav'>
+          <div class='center'>
             <button @click="cancel">cancel</button>
           </div>
         </div>
