--- a/www/index.html
+++ b/www/index.html
@@ -36,14 +36,13 @@
             <br>
             <br>
             <br>
-            <br>
             <button @click="route = 'sale'">new sale</button>
             <br>
             <br>
             <button @click="soon">recent sales</button>
             <br>
             <br>
-            <button @click="soon">settings</button>
+            <button @click="route = 'settings'">settings</button>
           </div>
         </div>
       </transition>
@@ -51,29 +50,29 @@
       <transition name="fade">
         <div id="sale" v-show="route === 'sale'">
           <div class="center">
-            <form action='' method='' id='form' autocomplete='off'>
-  				    <input v-model='usd' type='text' class='box' value='' disabled>
-  				    <br>
-  				    <input @click="add('1')" type='button' class='button number' value='1'>
-  				    <input @click="add('2')" type='button' class='button number' value='2'>
-  				    <input @click="add('3')" type='button' class='button number' value='3'>
-  				    <br>
-  				    <input @click="add('4')" type='button' class='button number' value='4'>
-  				    <input @click="add('5')" type='button' class='button number' value='5'>
-  				    <input @click="add('6')" type='button' class='button number' value='6'>
-  				    <br>
-  				    <input @click="add('7')" type='button' class='button number' value='7'>
-  				    <input @click="add('8')" type='button' class='button number' value='8'>
-  				    <input @click="add('9')" type='button' class='button number' value='9'>
-  				    <br>
-  				    <input @click="add('.')" type='button' class='button number' value='.'>
-  				    <input @click="add('0')" type='button' class='button number' value='0'>
-  				    <input @click="add('00')" type='button' class='button number' value='00'>
-  				    <br>
-  				    <input @click="cancel" type='button' class='button clear' value='cancel'>
-  				    <input @click="clear" type='button' class='button clear' value='clear'>
-  				    <input @click="purchase" type='button' class='button enter' value='enter'>
-  			    </form>
+            <form autocomplete='off'>
+              <input v-model='usd' type='text' class='box' value='' disabled>
+              <br>
+              <input @click="add('1')" type='button' class='button number' value='1'>
+              <input @click="add('2')" type='button' class='button number' value='2'>
+              <input @click="add('3')" type='button' class='button number' value='3'>
+              <br>
+              <input @click="add('4')" type='button' class='button number' value='4'>
+              <input @click="add('5')" type='button' class='button number' value='5'>
+              <input @click="add('6')" type='button' class='button number' value='6'>
+              <br>
+              <input @click="add('7')" type='button' class='button number' value='7'>
+              <input @click="add('8')" type='button' class='button number' value='8'>
+              <input @click="add('9')" type='button' class='button number' value='9'>
+              <br>
+              <input @click="add('.')" type='button' class='button number' value='.'>
+              <input @click="add('0')" type='button' class='button number' value='0'>
+              <input @click="add('00')" type='button' class='button number' value='00'>
+              <br>
+              <input @click="cancel" type='button' class='button clear' value='cancel'>
+              <input @click="clear" type='button' class='button clear' value='clear'>
+              <input @click="purchase" type='button' class='button enter' value='enter'>
+            </form>
           </div>
         </div>
       </transition>
@@ -84,7 +83,7 @@
           <img class="nfc" src='img/nfc.png'>
           <p class="secondary maintext confirm">tap card to purchase</p>
           <br>
-          <p class="secondary subtext">or send the amount above to <span class='dark'>{{ account }}</span> with the following memo:<br>
+          <p class="secondary subtext">or send the amount above to <span class='dark'>@{{ account }}</span> with the following memo:<br>
             <code class='dark memo'>{{ memo }}</code>
           </p>
           <br>
@@ -115,6 +114,18 @@
           <p class="dark maintext confirm">Partial Payment!</p>
         </div>
       </transition>
+      <!-- SETTINGS PAGE -->
+      <transition name="fade">
+        <div id="settings" v-show="route === 'settings'">
+          <div class="center">
+            <form autocomplete='off'>
+              <p class="dark formtext" align="left">account</p>
+              <input v-model='account' type='text' class='formbox' value=''>
+              <button @click.prevent="save">save</button>
+            </form>
+          </div>
+        </div>
+      </transition>
     </div>
   </div>
   <!-- LIBS -->
@@ -124,7 +135,6 @@
   <script src="js/lib/steem.min.js"></script>
   <script src="js/lib/aes.js"></script>
   <script src="js/lib/utils.js"></script>
-  <!-- <script src="js/lib/steempay.js"></script> -->
   <script src="js/lib/steempay.api.js"></script>
   <script src="js/lib/steempay.nfc.js"></script>
   <!-- SCRIPTS -->
