--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
             <button @click="route = 'sale'">new sale</button>
             <br>
             <br>
-            <button @click="route = 'recent'">recent sales</button>
+            <button @click="recentSales">recent sales</button>
             <br>
             <br>
             <button @click="route = 'settings'">settings</button>
@@ -164,7 +164,6 @@
   <!-- SCRIPTS -->
   <script src="js/config.js"></script>
   <script src="js/app.js"></script>
-
 </body>
 
 </html>
